--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\sandeeps\AppData\Local\Temp\testng-eclipse-1679245523\testng-customsuite.xml</span>
+                    <span>C:\Users\sandeeps\AppData\Local\Temp\testng-eclipse--115753091\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">4 methods,   4 passed</span>
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,22 +102,42 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testcases.NewTest" hash-for-method="preRequisite">preRequisite</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testcases.IMDBTest" hash-for-method="preRequisite">preRequisite</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testcases.NewTest" hash-for-method="verifyMovieRating">verifyMovieRating</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testcases.IMDBTest" hash-for-method="verifyDuplicateMovieData">verifyDuplicateMovieData</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testcases.NewTest" hash-for-method="verifyMovieReleaseYear">verifyMovieReleaseYear</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testcases.IMDBTest" hash-for-method="verifyMovieRating">verifyMovieRating</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testcases.NewTest" hash-for-method="verifyMoviesCount">verifyMoviesCount</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testcases.IMDBTest" hash-for-method="verifyMovieReleaseYear">verifyMovieReleaseYear</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testcases.IMDBTest" hash-for-method="verifyMoviesCount">verifyMoviesCount</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testcases.IMDBTest" hash-for-method="verifyRankingSorting">verifyRankingSorting</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testcases.IMDBTest" hash-for-method="verifyRatingSorting">verifyRatingSorting</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="testcases.IMDBTest" hash-for-method="verifyReleaseDateSorting">verifyReleaseDateSorting</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -135,7 +155,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testcases.NewTest</span>
+              <span class="class-name">testcases.IMDBTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -143,6 +163,13 @@
                   <a name="preRequisite">
                   </a> <!-- preRequisite -->
                   <span class="method-name">preRequisite</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyDuplicateMovieData">
+                  </a> <!-- verifyDuplicateMovieData -->
+                  <span class="method-name">verifyDuplicateMovieData</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -166,12 +193,33 @@
                   <span class="method-name">verifyMoviesCount</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyRankingSorting">
+                  </a> <!-- verifyRankingSorting -->
+                  <span class="method-name">verifyRankingSorting</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyRatingSorting">
+                  </a> <!-- verifyRatingSorting -->
+                  <span class="method-name">verifyRatingSorting</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyReleaseDateSorting">
+                  </a> <!-- verifyReleaseDateSorting -->
+                  <span class="method-name">verifyReleaseDateSorting</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\sandeeps\AppData\Local\Temp\testng-eclipse-1679245523\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\sandeeps\AppData\Local\Temp\testng-eclipse--115753091\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -180,7 +228,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testcases.NewTest&quot;/&gt;
+      &lt;class name=&quot;testcases.IMDBTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -220,28 +268,44 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(4);
+data.addRows(8);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyMovieRating')
-data.setCell(0, 2, 'testcases.NewTest')
-data.setCell(0, 3, 13172);
+data.setCell(0, 1, 'preRequisite')
+data.setCell(0, 2, 'testcases.IMDBTest')
+data.setCell(0, 3, 211414);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyMovieReleaseYear')
-data.setCell(1, 2, 'testcases.NewTest')
-data.setCell(1, 3, 11926);
+data.setCell(1, 1, 'verifyReleaseDateSorting')
+data.setCell(1, 2, 'testcases.IMDBTest')
+data.setCell(1, 3, 38611);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'preRequisite')
-data.setCell(2, 2, 'testcases.NewTest')
-data.setCell(2, 3, 11858);
+data.setCell(2, 1, 'verifyRatingSorting')
+data.setCell(2, 2, 'testcases.IMDBTest')
+data.setCell(2, 3, 25459);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'verifyMoviesCount')
-data.setCell(3, 2, 'testcases.NewTest')
-data.setCell(3, 3, 6795);
+data.setCell(3, 1, 'verifyRankingSorting')
+data.setCell(3, 2, 'testcases.IMDBTest')
+data.setCell(3, 3, 22547);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'verifyDuplicateMovieData')
+data.setCell(4, 2, 'testcases.IMDBTest')
+data.setCell(4, 3, 12843);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'verifyMoviesCount')
+data.setCell(5, 2, 'testcases.IMDBTest')
+data.setCell(5, 3, 10716);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'verifyMovieRating')
+data.setCell(6, 2, 'testcases.IMDBTest')
+data.setCell(6, 3, 10397);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'verifyMovieReleaseYear')
+data.setCell(7, 2, 'testcases.IMDBTest')
+data.setCell(7, 3, 9713);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 43 seconds</span>
+              <span class="suite-total-time">Total running time: 5 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -267,58 +331,106 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testcases.NewTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testcases.IMDBTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">preRequisite</span>
-                <span class="method-start">6757 ms</span>
+                <span class="method-start">7348 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">18615 ms</span>
+                <span class="method-start">218779 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">18615 ms</span>
+                <span class="method-start">220210 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyMoviesCount</span>
-                <span class="method-start">23433 ms</span>
+                <span class="method-start">225594 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">30231 ms</span>
+                <span class="method-start">236311 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">31666 ms</span>
+                <span class="method-start">237682 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyMovieReleaseYear</span>
-                <span class="method-start">35951 ms</span>
+                <span class="method-start">242323 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">47877 ms</span>
+                <span class="method-start">252037 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
-                <span class="method-start">48989 ms</span>
+                <span class="method-start">253163 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">verifyMovieRating</span>
-                <span class="method-start">54276 ms</span>
+                <span class="method-start">257614 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">67448 ms</span>
+                <span class="method-start">268014 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">269494 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifyDuplicateMovieData</span>
+                <span class="method-start">273964 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">286809 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">288100 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifyRankingSorting</span>
+                <span class="method-start">293204 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">315752 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">316866 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifyRatingSorting</span>
+                <span class="method-start">321471 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">346931 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">348261 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifyReleaseDateSorting</span>
+                <span class="method-start">353102 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">391713 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">deleteDB</span>
-                <span class="method-start">68776 ms</span>
+                <span class="method-start">392927 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
