--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,30 +1,54 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fbd876">  <td>17/06/14 17:19:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.setUp()[pri:0, instance:testcases.NewTest@3bfdc050]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>17/06/14 17:20:03</td>   <td>6757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.preRequisite()[pri:0, instance:testcases.NewTest@3bfdc050]">preRequisite</td> 
-  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>17/06/14 17:20:15</td>   <td>18615</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.tearDown()[pri:0, instance:testcases.NewTest@3bfdc050]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>17/06/14 17:20:15</td>   <td>18615</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.setUp()[pri:0, instance:testcases.NewTest@3bfdc050]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>17/06/14 17:20:20</td>   <td>23433</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.verifyMoviesCount()[pri:1, instance:testcases.NewTest@3bfdc050]">verifyMoviesCount</td> 
-  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>17/06/14 17:20:27</td>   <td>30232</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.tearDown()[pri:0, instance:testcases.NewTest@3bfdc050]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>17/06/14 17:20:28</td>   <td>31666</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.setUp()[pri:0, instance:testcases.NewTest@3bfdc050]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>17/06/14 17:20:33</td>   <td>35951</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.verifyMovieReleaseYear()[pri:2, instance:testcases.NewTest@3bfdc050]">verifyMovieReleaseYear</td> 
-  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>17/06/14 17:20:45</td>   <td>47877</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.tearDown()[pri:0, instance:testcases.NewTest@3bfdc050]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>17/06/14 17:20:46</td>   <td>48989</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;NewTest.setUp()[pri:0, instance:testcases.NewTest@3bfdc050]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>17/06/14 17:20:51</td>   <td>54276</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.verifyMovieRating()[pri:3, instance:testcases.NewTest@3bfdc050]">verifyMovieRating</td> 
-  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>17/06/14 17:21:04</td>   <td>67448</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.tearDown()[pri:0, instance:testcases.NewTest@3bfdc050]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
-<tr bgcolor="fbd876">  <td>17/06/14 17:21:05</td>   <td>68776</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;NewTest.deleteDB()[pri:0, instance:testcases.NewTest@3bfdc050]">&lt;&lt;deleteDB</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1225439493</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:15:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IMDBTest.setUp()[pri:0, instance:testcases.IMDBTest@6a4f787b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:15:08</td>   <td>7346</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IMDBTest.preRequisite()[pri:0, instance:testcases.IMDBTest@6a4f787b]">preRequisite</td> 
+  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:18:39</td>   <td>218777</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IMDBTest.tearDown()[pri:0, instance:testcases.IMDBTest@6a4f787b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:18:41</td>   <td>220208</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IMDBTest.setUp()[pri:0, instance:testcases.IMDBTest@6a4f787b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:18:46</td>   <td>225592</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IMDBTest.verifyMoviesCount()[pri:1, instance:testcases.IMDBTest@6a4f787b]">verifyMoviesCount</td> 
+  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:18:57</td>   <td>236309</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IMDBTest.tearDown()[pri:0, instance:testcases.IMDBTest@6a4f787b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:18:58</td>   <td>237680</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IMDBTest.setUp()[pri:0, instance:testcases.IMDBTest@6a4f787b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:19:03</td>   <td>242321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IMDBTest.verifyMovieReleaseYear()[pri:2, instance:testcases.IMDBTest@6a4f787b]">verifyMovieReleaseYear</td> 
+  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:19:13</td>   <td>252035</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IMDBTest.tearDown()[pri:0, instance:testcases.IMDBTest@6a4f787b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:19:14</td>   <td>253162</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IMDBTest.setUp()[pri:0, instance:testcases.IMDBTest@6a4f787b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:19:18</td>   <td>257612</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IMDBTest.verifyMovieRating()[pri:3, instance:testcases.IMDBTest@6a4f787b]">verifyMovieRating</td> 
+  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:19:29</td>   <td>268012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IMDBTest.tearDown()[pri:0, instance:testcases.IMDBTest@6a4f787b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:19:30</td>   <td>269493</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IMDBTest.setUp()[pri:0, instance:testcases.IMDBTest@6a4f787b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:19:35</td>   <td>273963</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IMDBTest.verifyDuplicateMovieData()[pri:4, instance:testcases.IMDBTest@6a4f787b]">verifyDuplicateMovieData</td> 
+  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:19:47</td>   <td>286807</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IMDBTest.tearDown()[pri:0, instance:testcases.IMDBTest@6a4f787b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:19:49</td>   <td>288099</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IMDBTest.setUp()[pri:0, instance:testcases.IMDBTest@6a4f787b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:19:54</td>   <td>293202</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IMDBTest.verifyRankingSorting()[pri:5, instance:testcases.IMDBTest@6a4f787b]">verifyRankingSorting</td> 
+  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:20:16</td>   <td>315750</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IMDBTest.tearDown()[pri:0, instance:testcases.IMDBTest@6a4f787b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:20:18</td>   <td>316864</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IMDBTest.setUp()[pri:0, instance:testcases.IMDBTest@6a4f787b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:20:22</td>   <td>321469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IMDBTest.verifyRatingSorting()[pri:6, instance:testcases.IMDBTest@6a4f787b]">verifyRatingSorting</td> 
+  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:20:48</td>   <td>346929</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IMDBTest.tearDown()[pri:0, instance:testcases.IMDBTest@6a4f787b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:20:49</td>   <td>348260</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;IMDBTest.setUp()[pri:0, instance:testcases.IMDBTest@6a4f787b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:20:54</td>   <td>353100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="IMDBTest.verifyReleaseDateSorting()[pri:7, instance:testcases.IMDBTest@6a4f787b]">verifyReleaseDateSorting</td> 
+  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:21:32</td>   <td>391712</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IMDBTest.tearDown()[pri:0, instance:testcases.IMDBTest@6a4f787b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
+<tr bgcolor="74d26a">  <td>17/06/16 16:21:34</td>   <td>392926</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;IMDBTest.deleteDB()[pri:0, instance:testcases.IMDBTest@6a4f787b]">&lt;&lt;deleteDB</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1846896625</td>   <td></td> </tr>
 </table>
